++ fixing group[1].length % 2 !== 0 ++ css variables for ratio color luminosity contrast testings

--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -56,10 +56,10 @@ button:disabled,
 }
 
 /* Correction pour les liens dans les alertes */
-.alert.bg-warning a {
+/* .alert.bg-warning a {
   color: black;
   text-decoration: underline !important;
-}
+} */
 
 /* Animation légère pour les alertes */
 .alert {
