--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -228,10 +228,10 @@ hr {
     }
 } */
 
-.alert.bg-warning a{
+/* .alert.bg-warning a{
     color: black;
     text-decoration: underline!important;
-  }
+  } */
 
 
 @media only screen and (max-width: 765px) {
